# trident

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
deploy/hf/: README.md  start.sh
docs/: FLEET_INTEL_PLAN.md  FUSION.md  INTEGRATION.md
scripts/: dev_install.sh
services/api/: Dockerfile  pyproject.toml
services/api/api/: __init__.py  main.py  region.py  routes.py  state_reader.py  threat.py  ws.py
services/api/tests/: test_api.py
services/cognition/: Dockerfile  pyproject.toml
services/cognition/cognition/: __init__.py  consumer.py  graph.py  llm.py  main.py  memory.py  persistence.py
services/cognition/cognition/agents/: __init__.py  analyst.py  desk.py  sentinel.py
services/cognition/cognition/fusion/: __init__.py  base.py  ofac.py  sar.py  weather.py
services/cognition/tests/: test_graph.py
services/db/: schema.sql
services/fleetscan/: Dockerfile  pyproject.toml
services/fleetscan/fleetscan/: __init__.py  config.py  geoutil.py  main.py  memory.py  sweep.py
services/fleetscan/fleetscan/agents/: __init__.py  base.py  classifiers.py
services/ingestor/: Dockerfile  pyproject.toml
services/ingestor/ingestor/: __init__.py  bus.py  cli.py  client.py  feedgap.py  geoutil.py  main.py  normalize.py  state.py  synthetic.py  writer.py
services/ingestor/ingestor/detectors/: __init__.py  base.py  config.py  congestion.py  dark_vessel.py  geofence.py  loitering.py  reroute.py  spoofing.py
services/ingestor/tests/: test_detectors.py
services/replay/: Dockerfile  pyproject.toml
services/replay/replay/: __init__.py  main.py  queries.py  routes.py
services/replay/tests/: test_queries.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/map/: Map.tsx  geo.ts  icons.ts  layers.ts  style.ts
web/components/rails/: AlertFeed.tsx  IncidentFeed.tsx  LeftRail.tsx  RegionPanel.tsx  VesselDossier.tsx
web/components/replay/: ReplayScrubber.tsx
web/components/statusbar/: StatusBar.tsx
web/components/ticker/: AlertTicker.tsx  CongestionStrip.tsx  SignalTicker.tsx
web/lib/: api.ts  chokepoints.ts  colors.ts  contracts.ts  store.ts  types.ts  ws.ts
web/public/geo/: suez_fairway.geojson
