[project]
name = "trident-api"
version = "1.0.0"
description = "TRIDENT api gateway — the Tier-4 FastAPI front door (REST + one multiplexed WebSocket)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    # The three shared spine packages. They live under packages/ at the repo
    # root and are installed editable alongside this service:
    #   pip install -e packages/contracts -e packages/common -e packages/geo -e services/api
    # They are intentionally NOT pinned here (no PyPI release); the Dockerfile
    # and dev setup install them by path.
    "trident-contracts",
    "trident-common",
    "trident-geo",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27", "fakeredis>=2.20"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
