[project]
name = "trident-cognition"
version = "1.0.0"
description = "TRIDENT cognition — the Tier-3 LangGraph agent swarm (Sentinel -> Analyst -> Desk)."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-groq>=0.2",
    "langgraph-checkpoint-postgres>=2",
    "psycopg[binary,pool]>=3.2",   # Postgres checkpointer + persistence writes
    "redis>=5",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    # The three shared spine packages. They live under packages/ at the repo
    # root and are installed editable alongside this service:
    #   pip install -e packages/contracts -e packages/common -e packages/geo -e services/cognition
    # They are intentionally NOT pinned here (no PyPI release); the Dockerfile
    # and dev setup install them by path.
    "trident-contracts",
    "trident-common",
    "trident-geo",
]

[project.optional-dependencies]
# The Desk agent's web-search tool is optional. Without it the Desk reasons
# from first principles (settings.desk_search_enabled=False).
search = ["langchain-community>=0.3", "tavily-python>=0.5"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "cognition",
    "cognition.agents",
    "cognition.fusion",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
