[project]
name = "trident-replay"
version = "1.0.0"
description = "TRIDENT replay — the Tier-4 forensic time machine (historical track replay + ST_DWithin proximity)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    # The three shared spine packages. They live under packages/ at the repo
    # root and are installed editable alongside this service:
    #   pip install -e packages/contracts -e packages/common -e packages/geo -e services/replay
    "trident-contracts",
    "trident-common",
    "trident-geo",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["replay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
